# Ellipse-Bikes

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  setup.cfg
django_project/: settings.py  urls.py
ellipse_bikes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
ellipse_bikes/cron/: func.py
ellipse_bikes/data/: contracts.json  stations_v1.json  stations_v2.json  stations_v3.json
ellipse_bikes/management/commands/: wait_for_db.py
ellipse_bikes/migrations/: 0001_initial.py  0002_insert_cities.py  0003_insert_contracts.py  0004_insert_stations.py  0005_insert_django_q2_schedules.py
ellipse_bikes/static/ellipse_bikes/css/: main.css
ellipse_bikes/templates/ellipse_bikes/: base.html  contract_stations.html  contracts.html  index.html  station_details.html
templates/admin/: base_site.html
